scss/globals.scss
@use "colors";

body {
    font-family: "Plus Jakarta Sans", sans-serif;
    font-weight: 500;
    font-size: 18px;
    line-height: 1.556; //28
    color: colors.$gray;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.container {
    width: 1110px;
}

.visually-hidden {
    position: absolute;
    width: 1px;
    height: 1px;
    margin: -1px;
    border: 0;
    padding: 0;
    white-space: nowrap;
    clip-path: inset(100%);
    clip: rect(0 0 0 0);
    overflow: hidden;
}

